--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
             color: white;
         }
     </style>
+    <script src="./equity-and-mutual-fund.calculator.js" defer></script>
+    <script src="./loan-and-credit.calculators.js" defer></script>
+    <!-- <script src="./savings-and-fixed-income.calculators.js" defer></script> -->
+ 
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
