solved multi category issue

--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
         {
           id: "mf-return",
           name: "Mutual Fund Return Calculator",
-          category: ["equity", "new"],
+          category: "equity",
           icon: "📉",
           description: "Calculate MF returns",
         },
