Name changed to Finverra

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </div>
             <div>
               <h1 class="text-xl sm:text-2xl font-bold text-gray-900">
-                FinCalc Pro
+                Finverra Pro
               </h1>
               <p class="text-xs sm:text-sm text-gray-500">
                 Complete Financial Planning Suite
