--- a/offline.html
+++ b/offline.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Offline - FinCalc Pro</title>
+    <title>Offline - Finverra Pro</title>
     <style>
       body {
         font-family: Inter, Arial, Helvetica, sans-serif;
