--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Financial Calculators Suite | SIP, EMI, Stock, Loan & Investment Tools
+      Finverra - Financial Calculators Suite | SIP, EMI, Stock, Loan & Investment Tools
     </title>
     <meta
       name="description"
