privacy policy, terms and conditions and donation pages added

--- a/index.html
+++ b/index.html
@@ -492,6 +492,36 @@
             Always consult with a financial advisor for personalized advice. -
             Sidhesh Parab
           </p>
+
+          <div class="mt-4 flex items-center justify-center space-x-4">
+            <a
+              href="./privacy-policy.html"
+              target="_blank"
+              rel="noopener"
+              class="text-sm text-gray-600 hover:text-gray-900"
+              >Privacy Policy</a
+            >
+            <span class="text-gray-300">•</span>
+            <a
+              href="./terms-and-conditions.html"
+              target="_blank"
+              rel="noopener"
+              class="text-sm text-gray-600 hover:text-gray-900"
+              >Terms &amp; Conditions</a
+            >
+            <span class="text-gray-300">•</span>
+            <a
+              href="./donation.html"
+              target="_blank"
+              rel="noopener"
+              class="text-sm text-gray-600 hover:text-gray-900 flex items-center gap-2"
+              >Donate / Support <span aria-hidden>❤️</span></a
+            >
+          </div>
+
+          <p class="text-gray-400 text-xs mt-4">
+            &copy; 2026 Finverra. All rights reserved.
+          </p>
         </div>
       </div>
     </footer>
