--- a/index.html
+++ b/index.html
@@ -493,30 +493,35 @@
             Sidhesh Parab
           </p>
 
-          <div class="mt-4 flex items-center justify-center space-x-4">
+          <div
+            class="mt-4 flex flex-col gap-4 md:gap-0 md:flex-row items-center justify-center space-x-4"
+          >
             <a
               href="./privacy-policy.html"
               target="_blank"
               rel="noopener"
-              class="text-sm text-gray-600 hover:text-gray-900"
+              class="text-xs underline md:text-sm text-gray-600 hover:text-gray-900"
               >Privacy Policy</a
             >
-            <span class="text-gray-300">•</span>
+            <span class="hidden md:block text-gray-300">•</span>
             <a
               href="./terms-and-conditions.html"
               target="_blank"
               rel="noopener"
-              class="text-sm text-gray-600 hover:text-gray-900"
+              class="text-xs underline md:text-sm text-gray-600 hover:text-gray-900"
               >Terms &amp; Conditions</a
             >
-            <span class="text-gray-300">•</span>
-            <a
-              href="./donation.html"
-              target="_blank"
-              rel="noopener"
-              class="text-sm text-gray-600 hover:text-gray-900 flex items-center gap-2"
-              >Donate / Support <span aria-hidden>❤️</span></a
-            >
+            <span class="hidden md:block text-gray-300">•</span>
+            <span class="flex items-center gap-1">
+              <a
+                href="./donation.html"
+                target="_blank"
+                rel="noopener"
+                class="text-xs underline md:text-sm text-gray-600 hover:text-gray-900 flex items-center gap-2"
+                >Donate / Support
+              </a>
+              <span aria-hidden class="no-underline">❤️</span>
+            </span>
           </div>
 
           <p class="text-gray-400 text-xs mt-4">
