--- a/donation.html
+++ b/donation.html
@@ -9,6 +9,7 @@
       content="Support Finverra - Donate to help maintain and improve the tools."
     />
     <meta name="robots" content="noindex, nofollow" />
+
     <style>
       :root {
         --bg: #f8fafc;
@@ -113,6 +114,18 @@
         border-radius: 8px;
         cursor: pointer;
       }
+
+      .back-btn {
+        position: absolute;
+        top: 24px;
+        left: 24px;
+        background: #e2e2e2;
+        padding: 4px;
+        border-radius: 4px;
+        color: rgb(72, 72, 72);
+        text-decoration: none;
+      }
+
       @media (max-width: 900px) {
         .grid {
           grid-template-columns: 1fr;
@@ -127,6 +140,23 @@
   <body>
     <div class="wrap">
       <div class="card">
+        <a href="./index.html" class="back-btn">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 20 20"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-arrow-left-icon lucide-arrow-left"
+          >
+            <path d="m12 19-7-7 7-7" />
+            <path d="M19 12H5" />
+          </svg>
+        </a>
         <h1>Donate / Support ❤️</h1>
         <p class="lead">
           If you find Finverra useful, your support helps keep tools updated and
