--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,6 +9,7 @@
       content="Privacy Policy for Finverra financial calculators."
     />
     <meta name="robots" content="index, follow" />
+
     <style>
       body {
         font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto,
@@ -40,10 +41,37 @@
       a {
         color: #4f46e5;
       }
+      .back-btn {
+        position: absolute;
+        top: 24px;
+        left: 24px;
+        background: #e2e2e2;
+        padding: 4px;
+        border-radius: 4px;
+        color: rgb(72, 72, 72);
+        text-decoration: none;
+      }
     </style>
   </head>
-  <body>
+  <body class="relative">
     <div class="container">
+      <a href="./index.html" class="back-btn">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="20"
+          height="20"
+          viewBox="0 0 20 20"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          class="lucide lucide-arrow-left-icon lucide-arrow-left"
+        >
+          <path d="m12 19-7-7 7-7" />
+          <path d="M19 12H5" />
+        </svg>
+      </a>
       <h1>Privacy Policy</h1>
       <p>Effective date: January 4, 2026</p>
 
