--- a/donation.html
+++ b/donation.html
@@ -119,6 +119,9 @@
         position: absolute;
         top: 24px;
         left: 24px;
+        width: 24px;
+        height: 24px;
+        border-radius: 100%;
         background: #e2e2e2;
         padding: 4px;
         border-radius: 4px;
