--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -50,6 +50,9 @@
         border-radius: 4px;
         color: rgb(72, 72, 72);
         text-decoration: none;
+        width: 24px;
+        height: 24px;
+        border-radius: 100%;
       }
     </style>
   </head>
